# ENCODE

./: CMakeLists.txt  README.md  package.xml  requirements.txt
include/: Transform.h  encode_ros.h  key_frame.h  map_builder.h
infer/: laserscan.py  model.py  net.py  parser.py  user.py
infer/backbone/: resnet.py
launch/: run.launch  rviz.rviz
src/: encode_ros.cpp  map_builder.cpp  node.cpp
